test/conformance/chainsaw/image-validating-policies/report/with-exception/policy-assert.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-report-background-sample
status:
  conditionStatus:
    conditions:
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    ready: true
