test/conformance/chainsaw/image-validating-policies/report/with-exception/skipped-report-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: skipped-deployment
results:
- policy: ivpol-report-background-sample
  properties:
    exceptions: exclude-skipped-deployment
  scored: true
  source: KyvernoImageValidatingPolicy
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: skipped-deployment
summary:
  error: 0
  fail: 0
  pass: 0
  skip: 1
  warn: 0
